--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "require" : {
     "ext-mongo": "*",
-    "mandrill/mandrill": "1.0.*"
+    "mandrill/mandrill": "1.0.*",
+    "google/apiclient": "^2.0.0@RC"
   },
   "require-dev": {
     "heroku/heroku-buildpack-php": "*"
