--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "require" : {
     "ext-mongo": "*",
     "mandrill/mandrill": "1.0.*",
-    "google/apiclient": "^2.0.0@RC"
+    "google/apiclient": "^1.1"
   },
   "require-dev": {
     "heroku/heroku-buildpack-php": "*"
